# Automatic-derivation

./: .gitignore  CMakeLists.txt  expression.h  main.cpp
